--- a/index/index.html
+++ b/index/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>喜迎二十大</title>
-  <link rel="stylesheet" href="/index/index.css">
+  <link rel="stylesheet" href="../index/index.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
   </div>
   <div class="rightContainer">
   </div>
-  <script src="/index/index.js"></script>
+  <script src="../index/index.js"></script>
 </body>
 
 </html>
