--- a/index/index.html
+++ b/index/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-  <div class="navigationContainer"></div>
+  <div class="navigationContainer">
+    <button>测试例</button>
+    <button>测试例</button>
+    <button>登录/注册</button>
+  </div>
   <div class="headContainer"></div>
   <div class="indexContainer">
     <div class="indexGrid center">
