添加了登录注册界面

--- a/index/index.html
+++ b/index/index.html
@@ -13,7 +13,7 @@
   <div class="navigationContainer">
     <button>测试例</button>
     <button>测试例</button>
-    <button>登录/注册</button>
+    <button id="toLogin">登录/注册</button>
   </div>
   <div class="headContainer"></div>
   <div class="indexContainer">
