--- a/index/index.html
+++ b/index/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>喜迎二十大</title>
   <link rel="stylesheet" href="../index/index.css">
+  <!-- Bootstrap5 -->
+  <link href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -15,7 +18,11 @@
     <button>测试例</button>
     <button id="toLogin">登录/注册</button>
   </div>
-  <div class="headContainer"></div>
+
+  <div class="headContainer">
+    <img src="../image/素材12.jpg">
+  </div>
+
   <div class="indexContainer">
     <div class="indexGrid center">
       <!-- 检索字段 -->
@@ -26,11 +33,42 @@
       <div id="jump5">测试例</div>
     </div>
   </div>
+
+  <!-- 左侧大容器 -->
   <div class="leftContainer">
-    <!-- 轮播图 -->
     <div class="leftCarouselImgBox">
+      <!-- 轮播 -->
+      <div id="demo" class="carousel slide" data-bs-ride="carousel">
+        <!-- 指示符 -->
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+        </div>
+        <!-- 轮播图片 -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../image/素材2.jpg" class="d-block" style="width:100%">
+          </div>
+          <div class="carousel-item">
+            <img src="../image/素材1.jpg" class="d-block" style="width:100%">
+          </div>
+          <div class="carousel-item">
+            <img src="../image/素材3.jpg" class="d-block" style="width:100%">
+          </div>
+        </div>
+        <!-- 左右切换按钮 -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </button>
+      </div>
     </div>
   </div>
+
+  <!-- 右侧大容器 -->
   <div class="rightContainer">
   </div>
   <script src="../index/index.js"></script>
