添加了背景

--- a/register/register.html
+++ b/register/register.html
@@ -10,29 +10,33 @@
 </head>
 
 <body>
-  <div class="login">
-    <div class="login-screen">
-      <div class="app-title">
-        <h1>注册</h1>
-      </div>
+  <div class="background-image">
+    <div class="gaussianBlur">
+      <div class="login">
+        <div class="login-screen">
+          <div class="app-title">
+            <h1>注册</h1>
+          </div>
 
-      <div class="login-form">
-        <div class="control-group">
-          <input type="text" class="login-field" value="" placeholder="填写账号" id="login-name">
-          <label class="login-field-icon fui-user" for="login-name"></label>
+          <div class="login-form">
+            <div class="control-group">
+              <input type="text" class="login-field" value="" placeholder="填写账号" id="login-name">
+              <label class="login-field-icon fui-user" for="login-name"></label>
+            </div>
+
+            <div class="control-group">
+              <input type="password" class="login-field" value="" placeholder="输入密码" id="login-pass">
+              <label class="login-field-icon fui-lock" for="login-pass"></label>
+            </div>
+
+            <div class="control-group">
+              <input type="password" class="login-field" value="" placeholder="再次确认密码" id="login-pass">
+              <label class="login-field-icon fui-lock" for="login-pass"></label>
+            </div>
+
+            <a id="toLogin" class="btn btn-primary btn-large btn-block">点击注册</a>
+          </div>
         </div>
-
-        <div class="control-group">
-          <input type="password" class="login-field" value="" placeholder="输入密码" id="login-pass">
-          <label class="login-field-icon fui-lock" for="login-pass"></label>
-        </div>
-
-        <div class="control-group">
-          <input type="password" class="login-field" value="" placeholder="再次确认密码" id="login-pass">
-          <label class="login-field-icon fui-lock" for="login-pass"></label>
-        </div>
-
-        <a id="toLogin" class="btn btn-primary btn-large btn-block">点击注册</a>
       </div>
     </div>
   </div>
