增加无障碍阅读模块

--- a/index/index.html
+++ b/index/index.html
@@ -14,8 +14,8 @@
 
 <body>
   <div class="navigationContainer">
-    <button>测试例</button>
-    <button>测试例</button>
+    <button id="changeText">无障碍阅读</button>
+    <button id="Text">测试例</button>
     <button id="toLogin">登录/注册</button>
   </div>
 
