完善版块内容

--- a/index/index.html
+++ b/index/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+  <!-- 背景图 -->
+  <div class="background-image"></div>
   <div class="navigationContainer">
     <button id="changeText">无障碍阅读</button>
     <button id="Text">测试例</button>
@@ -66,7 +68,15 @@
         </button>
       </div>
     </div>
-    
+
+    <div class="imgBox" style="background-image: url(../image/素材6.jpg)">
+    </div>
+    <div class="imgBox" style="background-image: url(../image/素材7.jpg)">
+    </div>
+    <div class="imgBox" style="background-image: url(../image/素材8.jpg)">
+    </div>
+    <div class="imgBox" style="background-image: url(../image/素材9.jpg)">
+    </div>
   </div>
 
   <!-- 右侧大容器 -->
