--- a/index/index.html
+++ b/index/index.html
@@ -17,7 +17,6 @@
   <div class="background-image"></div>
   <div class="navigationContainer">
     <button id="changeText">无障碍阅读</button>
-    <button id="Text">测试例</button>
     <button id="toLogin">登录/注册</button>
   </div>
 
@@ -28,7 +27,7 @@
   <div class="indexContainer">
     <div class="indexGrid center">
       <!-- 检索字段 -->
-      <div id="jump1">测试例</div>
+      <div id="jump-Conveningprocess">召开进程</div>
       <div id="jump2">测试例</div>
       <div id="jump3">测试例</div>
       <div id="jump4">测试例</div>
