--- a/index/index.html
+++ b/index/index.html
@@ -17,6 +17,7 @@
   <div class="background-image"></div>
   <div class="navigationContainer">
     <button id="changeText">无障碍阅读</button>
+    <input type="text" placeholder="中共二十大...">
     <button id="toLogin">登录/注册</button>
   </div>
 
@@ -27,8 +28,8 @@
   <div class="indexContainer">
     <div class="indexGrid center">
       <!-- 检索字段 -->
-      <div id="jump-Conveningprocess">召开进程</div>
-      <div id="jump2">测试例</div>
+      <div id="jump-ConveningProcess">召开进程</div>
+      <div id="jump-ConferenceSignificance">大会意义</div>
       <div id="jump3">测试例</div>
       <div id="jump4">测试例</div>
       <div id="jump5">测试例</div>
@@ -80,6 +81,11 @@
 
   <!-- 右侧大容器 -->
   <div class="rightContainer">
+    <div class="newsHead">
+      <p>新闻摘要</p>
+    </div>
+
+    <div class="splitLine"></div>
   </div>
   <script src="../index/index.js"></script>
 </body>
