--- a/index/index.html
+++ b/index/index.html
@@ -85,7 +85,12 @@
       <p>新闻摘要</p>
     </div>
 
+    <!-- 分割线 -->
     <div class="splitLine"></div>
+
+    <div class="newsTextBox">
+      <p id="jumpNews1">中共中央发出通知,部署党的二十大代表选举工作---></p>
+    </div>
   </div>
   <script src="../index/index.js"></script>
 </body>
