--- a/conference significance/conference significance.html
+++ b/conference significance/conference significance.html
@@ -13,7 +13,7 @@
   <!-- 背景图 -->
   <div class="background-image"></div>
   <div class="navigationContainer">
-    <button id="changeText">无障碍阅读</button>
+    <button id="changeText">字体放大</button>
     <input type="text" placeholder="中共二十大...">
     <button id="toLogin">登录/注册</button>
   </div>
