--- a/index/index.html
+++ b/index/index.html
@@ -16,7 +16,7 @@
   <!-- 背景图 -->
   <div class="background-image"></div>
   <div class="navigationContainer">
-    <button id="changeText">无障碍阅读</button>
+    <button id="changeText">字体放大</button>
     <input type="text" placeholder="中共二十大...">
     <button id="toLogin">登录/注册</button>
   </div>
@@ -30,9 +30,8 @@
       <!-- 检索字段 -->
       <div id="jump-ConveningProcess">召开进程</div>
       <div id="jump-ConferenceSignificance">大会意义</div>
-      <div id="jump3">测试例</div>
-      <div id="jump4">测试例</div>
-      <div id="jump5">测试例</div>
+      <div id="jump-RepresentativeFeeling">代表感想</div>
+      <div id="jump-BasesDynamic">基层动态</div>
     </div>
   </div>
 
@@ -90,9 +89,39 @@
 
     <div class="newsTextBox">
       <p id="jumpNews1">中共中央发出通知,部署党的二十大代表选举工作---></p>
+      <p id="jumpNews2">党的十九大报告诞生记---></p>
+      <p id="jumpNews3">中国共产党第十九次全国代表大会关于《中国共产党章程（修正案）》的决议---></p>
+      <p id="jumpNews4">中国共产党第十九次全国代表大会关于十八届中央纪律检查委员会工作报告的决议---></p>
+      <p id="jumpNews5">党的十八大以来成就---></p>
     </div>
+  </div>
+
+  <div class="carouselContainer">
+    <div id="carousel">
+      <figure id="spinner">
+        <img src="../image/1.jpg" alt>
+        <img src="../image/2.jpg" alt>
+        <img src="../image/3.jpg" alt>
+        <img src="../image/5.jpg" alt>
+        <img src="../image/6.jpg" alt>
+        <img src="../image/7.jpg" alt>
+        <img src="../image/8.jpg" alt>
+        <img src="../image/9.jpg" alt>
+        <img src="../image/10.jpg" alt>
+      </figure>
+    </div>
+    <span style="float:left" class="ss-icon" onclick="galleryspin('-')">&lt;</span>
+    <span style="float:right" class="ss-icon" onclick="galleryspin('')">&gt;</span>
   </div>
   <script src="../index/index.js"></script>
 </body>
 
+<footer>
+  <div class="footContainer">
+    <div class="center">
+      <br><p>制作@范挚铖 黄厚超 喻寻</p>
+      <p>联系邮箱:1485059943@qq.com</p>
+    </div>
+  </div>
+</footer>
 </html>
